# ece650-Waterloo-Traffic-Management-System

./: README.md
A1/: a1ece650.py  test.txt
A2/: CMakeLists.txt  ece650-a2.cpp
A3/: CMakeLists.txt  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  rgen.cpp
A4/: CMakeLists.txt  ece650-a4.cpp
Project/: CMakeLists (1).txt  ece650-prj.cpp
